# Minerva

./: Cargo.toml
crates/Minerva/: Cargo.toml
crates/Minerva/src/: main.rs  process.rs  server.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  lib.rs  main.rs  rag.rs  server.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: agent_client.rs  app.rs  client.rs  event.rs  main.rs  session.rs  tui.rs  ui.rs  update.rs
