[workspace]
members = ["crates/Minerva", "crates/agent", "crates/protocol", "crates/tui"]
default-members = ["crates/Minerva"]
resolver = "3"

[workspace.dependencies]
#
# Internal
#
protocol = { path = "crates/protocol" }
Minerva_Agent = { path = "crates/agent" }

#
# External
#
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
futures = "0.3.32"
