[package]
name = "Minerva-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
serde.workspace = true
serde_json.workspace = true
protocol.workspace = true
